--- a/src/partials/words.html
+++ b/src/partials/words.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default" ng-show="vm.preloadComplete">
     <div class="panel-heading">Words</div>
     <div class="list-group">
         <a ng-repeat="worddef in vm.worddefs" ng-click="vm.viewSingleWord($index)" class="list-group-item">
@@ -8,6 +8,11 @@
                 <span ng-click="vm.delWord($index)" class="glyphicon glyphicon-trash"></span>
             </span>
         </a>
+    </div>
+</div>
+<div class="panel panel-default" ng-show="!vm.preloadComplete">
+    <div class="panel-body">
+        Loading words...
     </div>
 </div>
 <div class="panel panel-default">
