Added loading spinner.

--- a/src/partials/words.html
+++ b/src/partials/words.html
@@ -11,11 +11,7 @@
             </a>
         </div>
     </div>
-    <div class="panel panel-default" ng-show="!vm.preloadComplete">
-        <div class="panel-body">
-            Loading words...
-        </div>
-    </div>
+    <div ng-include="'partials/loading.html'"></div>
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="input-group">
