Switched to the more reliable Pearson Dictionaries API.

--- a/src/partials/single-word.html
+++ b/src/partials/single-word.html
@@ -2,11 +2,11 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <span ng-click="vm.viewWords()" class="back-btn glyphicon glyphicon-chevron-left"></span>
-            Definitions for "{{vm.getWord()}}" ({{vm.getDefs().length}})
+            Definitions for "{{vm.selectedWord}}" ({{vm.selectedDefs.length}})
         </div>
         <ul class="list-group">
-            <li ng-repeat="def in vm.getDefs()" ng-click="vm.viewWord($index)" class="list-group-item">
-                {{$index+1}}. {{def.text}}
+            <li ng-repeat="def in vm.selectedDefs" ng-click="vm.viewWord($index)" class="list-group-item">
+                {{$index + 1}}. {{def}}
             </li>
         </ul>
     </div>
