Hide the define input until preload is complete.

--- a/src/partials/loading.html
+++ b/src/partials/loading.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-show="!vm.preloadComplete">
+<div class="panel panel-default">
     <div class="panel-body">
         <div class="sk-circle">
             <div class="sk-circle1 sk-child"></div>
