Going to the url of an undefined word redirects to the main view.

--- a/src/partials/single-word.html
+++ b/src/partials/single-word.html
@@ -2,10 +2,10 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <span ng-click="vm.viewWords()" class="back-btn glyphicon glyphicon-chevron-left"></span>
-            Definitions for "{{vm.selectedWord}}" ({{vm.selectedDefs.length}})
+            Definitions for "{{vm.getSelectedWord()}}" ({{vm.getSelectedDefs().length}})
         </div>
         <ul class="list-group">
-            <li ng-repeat="def in vm.selectedDefs" ng-click="vm.viewWord($index)" class="list-group-item">
+            <li ng-repeat="def in vm.getSelectedDefs()" ng-click="vm.viewWord($index)" class="list-group-item">
                 {{$index + 1}}. {{def}}
             </li>
         </ul>
